@@ -26,7 +26,11 @@ import org.apache.flink.testutils.ClassLoaderUtils;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
+import static org.assertj.core.api.Assertions.assertThat;
 import org.junit.jupiter.api.Test;
+import static org.assertj.core.api.AssertionsForClassTypes.within;
+import static org.assertj.core.api.Fail.fail;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.Serializable;
 
@@ -87,7 +91,7 @@ class KryoSerializerClassLoadingTest extends SerializerTestBase<Object> {
     @Override
     protected Object[] getTestData() {
         return new Object[] {
-            new Integer(7),
+            Integer.valueOf(7),
 
             // an object whose class is not on the classpath
             OUTSIDE_CLASS_LOADING.getObject(),
